[project]
name = "shitpost"
version = "0.1.0"
description = "Shitpost Link Shortener"
authors = [
    {name = "Greg Poirier", email = "greg.istehbest@gmail.com"},
]
dependencies = [
    "fastapi~=0.115.6",
    "fastapi[standard]~=0.115.6",
    "databases~=0.9.0",
    "sqlalchemy~=2.0.36",
    "pydantic~=2.10.4",
    "uvicorn",
    "atproto~=0.0.56",
    "aiosqlite~=0.20.0", 
    "pydantic-settings~=2.7.0",
    "python-dotenv~=1.0.1",
    "alembic~=1.14.0",
    "typer>=0.15.1",
    "requests>=2.32.3",
]
requires-python = ">=3.8"

[project.scripts]
st = "app.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]